buildscript {
    ext {
        springBootVersion = '4.0.7'
        set('springCloudVersion', "2025.1.2")
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

buildscript {
    repositories {
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath "net.saliman:gradle-cobertura-plugin:4.0.0"
    }
}

plugins {
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.springframework.boot' version '4.0.7'
    id "org.sonarqube" version "4.4.1.3373"
}


apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
// apply plugin: 'net.saliman.cobertura'
apply plugin: 'jacoco'

sonarqube {
    properties {
        property "systemProp.sonar.host.url", ""
        property "systemProp.sonar.jdbc.url", ""
        property "systemProp.sonar.jdbc.driverClassName", "com.mysql.jdbc.Driver"
        property "sonar.projectName", "scsb-etl"
        property "systemProp.sonar.jdbc.username", ""
        property "systemProp.sonar.jdbc.password", ""
    }
}

jar {
    archiveBaseName = 'scsb-etl'
    archiveVersion = '0.0.1-SNAPSHOT'
}

/*
sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17
*/

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}


dependencies {
    implementation fileTree(dir: '/data/commonjar', include: '*3.2.jar')
    implementation 'org.apache.camel.springboot:camel-spring-boot-starter:4.22.0'
    implementation 'org.apache.camel.springboot:camel-spring-boot-dependencies:4.22.0'
    implementation 'org.apache.camel:camel-activemq6:4.22.0'
    implementation 'org.apache.camel:camel-ftp:4.22.0'
    implementation 'org.apache.camel:camel-csv:4.22.0'
    implementation 'org.apache.camel:camel-bindy:4.22.0'
    implementation 'org.apache.camel:camel-mail:4.22.0'
    implementation 'org.apache.camel:camel-stream:4.22.0'
    implementation 'org.apache.camel:camel-jaxb:4.22.0'
    implementation 'org.apache.camel:camel-zipfile:4.22.0'
   // implementation 'org.apache.camel:camel-jms:4.22.0'

    implementation 'org.apache.camel.springboot:camel-aws-s3-starter:3.8.0'
    implementation 'org.apache.camel:camel-aws-s3:3.8.0'

    implementation 'jakarta.mail:jakarta.mail-api:2.2.0-M1'
    implementation 'com.sun.mail:smtp:2.0.2'
    implementation 'com.sun.mail:jakarta.mail:2.0.2'

    implementation 'org.apache.commons:commons-csv:1.10.0'
    implementation 'org.apache.commons:commons-lang3:3.20.0'

    implementation 'org.apache.activemq:activemq-pool:6.2.0'
    implementation 'org.apache.activemq:activemq-broker:6.2.0'
    implementation 'org.apache.activemq:activemq-client:6.2.0'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation("org.springframework.cloud:spring-cloud-config-client:5.0.4")
    implementation 'org.springframework.boot:spring-boot-starter-web-services'

    implementation 'com.google.guava:guava:33.6.0-jre'
    implementation 'commons-io:commons-io:2.22.0'
    implementation 'commons-beanutils:commons-beanutils:1.11.0'
   // implementation 'info.freelibrary:freelib-marc4j:2.6.12'
    implementation 'org.marc4j:marc4j:2.9.6'
    implementation 'org.dom4j:dom4j:2.2.0'

    implementation 'javax.validation:validation-api:2.0.1.Final'

    implementation 'org.projectlombok:lombok:1.18.46'
    annotationProcessor 'org.projectlombok:lombok:1.18.46'
    testImplementation 'org.projectlombok:lombok:1.18.46'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.46'

    implementation 'com.mysql:mysql-connector-j:9.1.0'
    implementation 'org.codehaus.jettison:jettison:1.5.7'

    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'net.logstash.logback:logstash-logback-encoder:9.0'
    implementation 'io.zipkin.brave:brave:6.3.1'
    //implementation 'javax.servlet:javax.servlet-api:4.0.1'

    implementation 'org.springframework.cloud:spring-cloud-starter-config'
    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
    implementation 'org.json:json:20260719'
    implementation 'com.google.code.gson:gson:2.14.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.5.0'
    testImplementation group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.9'
    testImplementation group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.9'

    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'

}

//configurations.all {
//    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
//        if (details.requested.group == 'org.apache.logging.log4j') {
//            details.useVersion '2.17.0'
//        }
//    }
//}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

eclipse {
    classpath {
        containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
        containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
    }
}

test {
    finalizedBy jacocoTestReport // report is always generated after tests run
    systemProperties = System.properties
    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
    jvmArgs "--add-opens", "java.base/java.util=ALL-UNNAMED"
}
jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
}

jacocoTestReport {
    reports {
        xml.required = true
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
    }
}


jacoco {
    toolVersion = "0.8.10"
    reportsDirectory = layout.buildDirectory.dir('customJacocoReportDir')
}

task scsbEtlJavadocs(type: Javadoc) {
    source = sourceSets.main.java
    classpath = configurations.implementation
    options.addStringOption('Xdoclint:none', '-quiet')
    String home = System.getProperty("user.home")
    destinationDir = new File(home + "/scsb-javadocs/scsb-etl")
}



jar {
    enabled = false
    archiveClassifier = '' //use empty string
}
tasks.named('bootJar') {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}